# iis3dwb-rs

./: Cargo.toml  README.md  rust-toolchain.toml
examples/: Cargo.toml  nrf52dk-fifo.rs  nrf52dk-irqs.rs  nrf52dk-rtic.rs  nrf52dk.rs
src/: fifos.rs  interrupts.rs  lib.rs  register.rs
