[package]
name = "iim42652"
description = "An embedded-hal driver for the IIS3DWB accelerometer that implements the generic accelerometer trait"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
authors = [
    "Mehmet Ali Anil <mehmet@grusbv.com>"
]
keywords = [
    "embedded-hal-driver",
    "accelerometer",
]
repository = "https://github.com/Grus-BV/iim42652-rs"
edition = "2018"

[features]
board_alpha = []
defmt = []
# set logging levels here
default = [
"board_alpha",
# "nightly",
]
# nightly = ["embassy-nrf/nightly", "embassy-nrf/unstable-traits"]

# Removed since emabssy has changed structure and still is pre-release so still uses the same version number

# [patch.crates-io]
# embassy = { git = "https://github.com/embassy-rs/embassy" }
# embassy-nrf = {  git = "https://github.com/embassy-rs/embassy" }


# # cargo build/run
# [profile.dev]
# codegen-units = 1
# debug = 2
# debug-assertions = true # <-
# incremental = false
# opt-level = 3 # <-
# overflow-checks = true # <-
# panic = "abort"

# # cargo test
# [profile.test]
# codegen-units = 1
# debug = 2
# debug-assertions = true # <-
# incremental = false
# opt-level = 3 # <-
# overflow-checks = true # <-

# # cargo build/run --release
# [profile.release]
# codegen-units = 1
# debug = 2
# debug-assertions = false # <-
# incremental = false
# lto = 'fat'
# opt-level = 3 # <-
# overflow-checks = false # <-

# # cargo test --release
# [profile.bench]
# codegen-units = 1
# debug = 2
# debug-assertions = false # <-
# incremental = false
# lto = 'fat'
# opt-level = 3 # <-
# overflow-checks = false # <-

[dependencies]
accelerometer = "~0.12"
micromath = { version = '1', features = ['vector'] }
num_enum = { version = "~0.5", default-features = false }
panic-probe = { version = "0.3.0", features= ["print-defmt"] }
embedded-hal    = "0.2.6"
cortex-m        = { version = "0.7.2" }
cortex-m-rt = "0.7.0"
cortex-m-rtic = "0.5"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
modular-bitfield = "0.11.2"

[dev-dependencies]
nrf52840-hal = {version = "0.14.0",features = ["rt"] } 
# embassy = {version = "0.1.0", features = ["defmt"]}
# embassy-nrf = {version = "0.1.0", features = [ "defmt", "nrf52840", "time-driver-rtc1", "nightly"]}

# TODO will reestablish examples.

# [[example]]   
# name = 'nrf52dk'

